packages/taquito-michel-codec/test/contracts_014/ill_typed/emit_instruction_error_contract.tz
{ parameter unit ;
  storage unit ;
  code { DROP ;
         UNIT ;
         PUSH nat 10 ;
         LEFT string ;
         EMIT %event ;
         PUSH string "lorem ipsum" ;
         RIGHT nat ;
         EMIT %event (or (string %words) (string %words)) ;
         NIL operation ;
         SWAP ;
         CONS ;
         SWAP ;
         CONS ;
         PAIR } }
